@@ -59,7 +59,7 @@ namespace HepMC {
 	//
 	// check the state of m_file is good, and that it is in output mode
 	if ( !evt || !m_file ) return;
-	if ( !m_mode&std::ios::out ) {
+	if ( !(m_mode&std::ios::out) ) {
 	    std::cerr << "HepMC::IO_ExtendedAscii::write_event "
 		      << " attempt to write to input file." << std::endl;
 	    return;
@@ -173,7 +173,7 @@ namespace HepMC {
     void IO_ExtendedAscii::write_comment( const std::string comment ) {
 	// check the state of m_file is good, and that it is in output mode
 	if ( !m_file ) return;
-	if ( !m_mode&std::ios::out ) {
+	if ( !(m_mode&std::ios::out) ) {
 	    std::cerr << "HepMC::IO_ExtendedAscii::write_comment "
 		      << " attempt to write to input file." << std::endl;
 	    return;
@@ -189,7 +189,7 @@ namespace HepMC {
 	//
 	// check the state of m_file is good, and that it is in output mode
 	if ( !m_file ) return;
-	if ( !m_mode&std::ios::out ) {
+	if ( !(m_mode&std::ios::out) ) {
 	    std::cerr << "HepMC::IO_ExtendedAscii::write_particle_data_table "
 		      << " attempt to write to input file." << std::endl;
 	    return;
